--- a/mall-learning/demo-01/src/main/resources/application.yml
+++ b/mall-learning/demo-01/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysl://localhost:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimeZone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
     password: 123456
 
